# wasi_mindmap

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
guest-adder-py/: .gitignore  README.md  guest-adder.py  guest-interfaced-adder.py  pyproject.toml
guest-adder-py/adder/: __init__.py
guest-adder-py/interfaced_adder/: __init__.py  types.py
guest-adder-py/interfaced_adder/exports/: __init__.py  add.py
guest-adder-rs/: Cargo.toml
guest-adder-rs/src/: lib.rs
guest-adder-rs/wit/: adder.wit
guest-interfaced-adder-rs/: Cargo.toml
guest-interfaced-adder-rs/src/: lib.rs
guest-interfaced-adder-rs/wit/: interfaced-adder.wit
guest-kv-store-rs/: Cargo.toml  rust-toolchain.toml
guest-kv-store-rs/src/: lib.rs
guest-kv-store-rs/wit/: kv-store.wit
guest-largestring-rs/: Cargo.toml  rust-toolchain.toml
guest-largestring-rs/src/: lib.rs
guest-largestring-rs/wit/: string.wit
host-command-component/: Cargo.toml  README.md
host-command-component/src/: bindings.rs  main.rs
host-command-component/wit/: host.wit
host-py/: .gitignore  README.md  guest_adder_rs.wasm  guest_interfaced_adder_rs.wasm  host.py  pyproject.toml  requirements.txt  run_guest_adder_rs.py  run_guest_adder_rs_magic_loader.py  run_guest_interfaced_adder_rs.py
host-rs/: Cargo.toml  build.rs
host-rs/src/: adder.rs  main.rs  utils.rs
host-rs/src/adder/: py_guest.rs  rs_guest.rs
host-rs/src/adder/py_guest/: async_version.rs  sync_version.rs
host-rs/src/adder/rs_guest/: async_version.rs  interfaced_sync_version.rs  sync_version.rs
host-rs/src/kv_store/: rs_guest.rs
host-rs/src/kv_store/rs_guest/: async_version.rs  sync_version.rs
host-rs/src/large_string/: rs_guest.rs
wit-files/: adder.wit  host.wit  interfaced-adder.wit  kv-store.wit  string.wit
