[package]
name = "host-rs"
version = "0.5.5"
edition = "2024"

[dependencies]
anyhow = "1.0"
wasmtime = "41.0"
wasmtime-wasi = "41.0"
wasmtime-wasi-io = "41.0"
futures = { version = "0.3", features = ["executor"] }
clap = { version = "4.0", features = ["derive"] }
#async-trait = "0.1" # before wasmtime 29.0, this is needed